--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -10,10 +10,10 @@
 
 @dark-highlight: #101010;
 @light-highlight: #d4d0d0;
-@alt-highlight: #109dc8;
+@alt-highlight: #8bc34a;
 
 @light-green: #00da29;
-@dark-green: #0f8c26;
+@dark-green: #cddc39;
 
 @txt-color: #d8d7d7;
 @border-alpha: #eee;
