--- a/src/components/Playground/index.module.less
+++ b/src/components/Playground/index.module.less
@@ -29,9 +29,9 @@
   }
   .fill {
     width: 64px;
-    background-color: black;
+    filter: invert(1);
   }
-  animation: slide 4s linear 0s none;
+  animation: slide 4s ease-in-out 0s none;
 }
 
 @keyframes slide {
