--- a/src/components/GlitchText/index.less
+++ b/src/components/GlitchText/index.less
@@ -44,7 +44,7 @@
 .console {
   font-size: 1.5em;
   color: @alt-highlight;
-  animation: blinker 1s linear infinite;
+  //animation: blinker 1s linear infinite;
   display: inline-flex;
 }
 
