--- a/src/components/Playground/index.module.less
+++ b/src/components/Playground/index.module.less
@@ -15,6 +15,20 @@
   filter: invert(1);
   position: absolute;
   top: 320px;
+  transition: all 0.2s ease-in-out;
+  .flame {
+    width: 0;
+    height: 0;
+    border-left: 5.5px solid transparent;
+    border-right: 5.5px solid transparent;
+    border-top: 12px solid #f44336;
+    filter: invert(1);
+    //transition: transform 0.5s ease-in-out;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%) scale(1);
+    animation: burner 5s ease-in-out 0s infinite;
+  }
 }
 
 .space {
@@ -40,6 +54,18 @@
   }
   100% {
     top: 100%;
+  }
+}
+
+@keyframes burner {
+  0% {
+    transform: translate(-50%, -50%) scale(0);
+  }
+  50% {
+    transform: translate(-50%, -50%) scale(1);
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(0);
   }
 }
 
